<resources>
    <string name="app_name">Alcor Music</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_help">Help</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_account">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">search</string>
    <string name="checkout">Checkout</string>
    <string name="pay_using">Pay Using</string>
    <string name="buy_now">Buy Now</string>
    <string name="tracklist">TRACKLIST</string>

    <string-array name="paymentmethods">
        <item id="airtel">Airtel Money</item>
        <item>TNM Mpamba</item>
        <item>Mo626 - National Bank</item>
        <!--item>NBS - EazyBank</item-->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="steve_chikwiri">Steve Chikwiri</string>
    <string name="schikwiri">schikwiri</string>
    <string name="kyc_details">KYC</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="your_projects">My Projects</string>
    <string name="projects">Projects</string>

</resources>