<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_album"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/projects" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/title_account" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_support"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/title_help" />

</menu>