<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.alcor.music.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.alcor.music.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.alcor.music.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_item_details"
        android:name="com.alcor.music.ui.itemdetails.ItemDetailsFragment"
        android:label=""
        tools:layout="@layout/fragment_item_details" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.alcor.music.ui.account.AccountFragment"
        android:label="AccountFragment" />
    <fragment
        android:id="@+id/navigation_projects"
        android:name="com.alcor.music.ui.projects.ProjectsFragment"
        android:label="fragment_projects"
        tools:layout="@layout/fragment_projects" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.alcor.music.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
</navigation>