<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="ui.account.AccountFragment">

        <RelativeLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/account"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0.4dp">
                    <ImageView
                        android:id="@+id/profile_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="18sp"
                            android:text="@string/steve_chikwiri"/>
                        <ImageView
                            android:id="@+id/verification"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_marginStart="8dp"
                            app:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_verified" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">
                        <TextView
                            android:id="@+id/handle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimaryText"
                            android:text="@string/schikwiri"/>
                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    app:cardCornerRadius="12dp"
                    android:layout_marginBottom="24dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <RelativeLayout
                            android:id="@+id/projects"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginHorizontal="16dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:textSize="16sp"
                                android:text="@string/your_projects"/>
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                app:srcCompat="@drawable/ic_chevron_right" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.3dp"
                                android:layout_alignParentBottom="true"
                                android:background="#cccccc"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginHorizontal="16dp">
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.3dp"
                                android:layout_alignParentBottom="true"
                                android:background="#cccccc"/>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp">
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.3dp"
                                android:layout_alignParentBottom="true"
                                android:background="#cccccc"/>
                        </RelativeLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </ScrollView>



    </LinearLayout>
</layout>
